# hue-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SRD-hue-cli.md
src/hue_cli/: __init__.py  __main__.py  _protocols.py  cli.py  colors.py  config.py  credentials.py  errors.py  logging_setup.py  output.py  parallel.py  types.py  wrapper.py
src/hue_cli/verbs/: __init__.py  auth.py  batch_cmd.py  bridge.py  config_cmd.py  group_cmd.py  info_cmd.py  list_cmd.py  onoff_cmd.py  scene_cmd.py  sensor_cmd.py  set_cmd.py
tests/: test_batch_cmd.py  test_colors.py  test_emit_batch_result.py  test_filter_polish.py  test_group_cmd.py  test_logging_setup.py  test_parallel.py  test_part_a.py  test_part_b.py  test_scene_cmd.py  test_sensor_cmd.py  test_set_cmd.py  test_signal_handling.py  test_smoke.py  test_target_resolution.py  test_wrapper_records.py
