[project]
name = "hue-cli"
version = "0.1.0"
description = "Deterministic local-LAN CLI for Philips Hue Bridges"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
authors = [{ name = "Dan Elliott" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
  "Topic :: System :: Networking",
]
dependencies = [
  "aiohue>=4.8.1,<5",
  "aiohttp>=3.9",
  "click>=8.1",
  "zeroconf>=0.131",
]

[project.scripts]
hue-cli = "hue_cli.__main__:main"

[project.urls]
Repository = "https://github.com/agileguy/hue-cli"
Issues = "https://github.com/agileguy/hue-cli/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "aioresponses>=0.7",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hue_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
